unpackaged/main/default/objects/pse__Risk__c/pse__Risk__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__RiskHelp</customHelpPage>
    <description>Contains risks raised against projects.</description>
    <label>Risk</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Risk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>