unpackaged/main/default/objects/pse__Risk__c/fields/Conga_Impact__c.field-meta.xml
<CustomField>
    <fullName>Conga_Impact__c</fullName>
    <formula>IF( ISPICKVAL(pse__Impact__c, '1') , '1 - Negligible',
IF( ISPICKVAL(pse__Impact__c, '2') , '2 - Low',
IF( ISPICKVAL(pse__Impact__c, '3') , '3 - Moderate',
IF( ISPICKVAL(pse__Impact__c, '4') , '4 - High',
IF( ISPICKVAL(pse__Impact__c, '5') , '5 - Critical', ''
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Impact</label>
    <type>Text</type>
</CustomField>