unpackaged/main/default/objects/pse__Risk__c/fields/Conga_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Conga_Likelihood__c</fullName>
    <formula>IF( ISPICKVAL(pse__Likelihood__c, '1') , '1 - Very unlikely', 
IF( ISPICKVAL(pse__Likelihood__c, '2') , '2 - Unlikely', 
IF( ISPICKVAL(pse__Likelihood__c, '3') , '3 - 50/50', 
IF( ISPICKVAL(pse__Likelihood__c, '4') , '4 - Very likely', 
IF( ISPICKVAL(pse__Likelihood__c, '5') , '5 - Almost certain', ''
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Likelihood</label>
    <type>Text</type>
</CustomField>