unpackaged/main/default/objects/pse__Risk__c/fields/pse__Account__c.field-meta.xml
<CustomField>
    <fullName>pse__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account relating to the risk.</description>
    <inlineHelpText>This field will auto populate with the Account selected against the Project when this Risk is created and saved.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>