unpackaged/main/default/objects/pse__Risk__c/fields/pse__Closed__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed__c</fullName>
    <description>Determines when closed based on the risk's Status. Defaults to true when the Status is Closed. Set to false for Open.</description>
    <formula>If( ISPICKVAL( pse__Status__c, 'Open'), false, true)</formula>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>