unpackaged/main/default/objects/pse__Risk__c/fields/pse__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Closed_Date__c</fullName>
    <description>The date that the risk was closed.</description>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>