unpackaged/main/default/objects/pse__Risk__c/fields/pse__Comments__c.field-meta.xml
<CustomField>
    <fullName>pse__Comments__c</fullName>
    <description>Additional comments about the risk.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>