unpackaged/main/default/objects/pse__Risk__c/fields/pse__Contingency__c.field-meta.xml
<CustomField>
    <fullName>pse__Contingency__c</fullName>
    <description>A description for the plan of contingency to take place against the risk.</description>
    <label>Contingency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>