unpackaged/main/default/objects/pse__Risk__c/fields/pse__Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>pse__Date_Raised__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>The date that the risk was raised.</description>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>