unpackaged/main/default/objects/pse__Risk__c/fields/pse__Likelihood__c.field-meta.xml
<CustomField>
    <fullName>pse__Likelihood__c</fullName>
    <description>Picklist holding likelihood of risk to occur</description>
    <inlineHelpText>5 is Critical</inlineHelpText>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - Very unlikely</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>2 - Unlikely</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3 - 50/50</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4 - Very likely</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 - Almost certain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>