unpackaged/main/default/objects/pse__Risk__c/fields/pse__Milestone__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone relating to the risk.</description>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Milestone__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.pse__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>