unpackaged/main/default/objects/pse__Risk__c/fields/pse__Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>pse__Mitigation_Plan__c</fullName>
    <description>A description for the plan of mitigation to take place against the risk.</description>
    <label>Mitigation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>