unpackaged/main/default/objects/pse__Risk__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity relating to the risk.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>