unpackaged/main/default/objects/pse__Risk__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project relating to the risk.</description>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>