unpackaged/main/default/objects/pse__Risk__c/fields/pse__Risk_Owner__c.field-meta.xml
<CustomField>
    <fullName>pse__Risk_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The resource assigned as the risk owner.</description>
    <label>Risk Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>