unpackaged/main/default/objects/pse__Risk__c/fields/pse__Severity__c.field-meta.xml
<CustomField>
    <fullName>pse__Severity__c</fullName>
    <description>The severity of the risk. Calculated from Impact and Likelihood values.</description>
    <formula>VALUE( TEXT(pse__Impact__c ) ) * VALUE( TEXT(pse__Likelihood__c ) )</formula>
    <label>Severity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>