unpackaged/main/default/objects/pse__Risk__c/validationRules/pse__Clear_closed_date_with_open_status.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Clear_closed_date_with_open_status</fullName>
    <active>true</active>
    <description>The Closed Date must be blank if the status is set to Open.</description>
    <errorConditionFormula>AND( ISPICKVAL( pse__Status__c , 'Open'), NOT(ISBLANK( pse__Closed_Date__c )))</errorConditionFormula>
    <errorMessage>Closed date must be blank if status is set to Open</errorMessage>
</ValidationRule>