unpackaged/main/default/objects/pse__Risk__c/validationRules/pse__Closed_date_greater_than_created_date.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Closed_date_greater_than_created_date</fullName>
    <active>true</active>
    <description>The risk's Closed Date must be after it was raised.</description>
    <errorConditionFormula>AND( ISPICKVAL( pse__Status__c, 'Closed'),pse__Date_Raised__c &gt; pse__Closed_Date__c)</errorConditionFormula>
    <errorMessage>Closed date for the risk must be after the date it was raised.</errorMessage>
</ValidationRule>