unpackaged/main/default/objects/pse__Risk__c/validationRules/pse__Closed_date_mandatory_with_closed_status.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Closed_date_mandatory_with_closed_status</fullName>
    <active>true</active>
    <description>The Closed Date cannot be blank if the status is set to Closed.</description>
    <errorConditionFormula>AND (ISPICKVAL( pse__Status__c , 'Closed'), ISBLANK( pse__Closed_Date__c ))</errorConditionFormula>
    <errorMessage>Closed date can not be blank if status set to closed.</errorMessage>
</ValidationRule>